--- a/.github/workflows/daily-metrics.yaml
+++ b/.github/workflows/daily-metrics.yaml
@@ -47,4 +47,4 @@ jobs:
           plugin_wakatime_repositories_visibility: all
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: "@jsunday"
+          plugin_wakatime_user: JSunday
